# rusty-SUNDIALS

./: .dockerignore  .gcloudignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.mission-control  LICENSE  Makefile  NOTICE  README.md  RELEASE_NOTES_v6.0.0.md  SPECS.md  TODO.md  cloudbuild.yaml  cvRoberts_dns_stats.csv  model selection.md  optimize_photonics_bin  pytest.ini  rustfmt.toml  vdp_scipy.py
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
autoresearch_agent/: .env.example  Dockerfile  auto_latex.py  autorun_v10_research.py  bioreactor_advanced.py  bioreactor_sim.py  cost_monitor.py  cusparse_amgx_v10.py  explainability_v10.py  federated_v10.py  federated_v11.py  generate_academic_figures.py  hypothesis_validator_v11.py  hypothesizer_llm.py  iter_phase3_serverless.py  lake_repl_mock.py  lean_proof_cache.py  lean_repl_hook.py  neuro_symbolic_v10.py  orchestrator.py  orchestrator_prod.py  orchestrator_v10.py  oxidize_cyclo.py  peer_review_v10.py  peer_review_v11.py  phase4_disruptive.py  physics_gatekeeper.pl  physics_gatekeeper.py  physics_validator_v10.py  pipeline_v10_full.py  reproduce_v10_soc.py  requirements.txt  rl_agent_v10.py  run_optimization_serverless.py  simulate_long_run.py  slurm_exascale.py  slurm_sim_v11.py  slurm_v10.py  syntax_codebert.py  tearing_mode_1d.py  (+3 more)
backend/: main.py  storage.json
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: c_vs_rust_suite.rs
crates/benchmarks/src/: lib.rs
crates/cvode/: Cargo.toml
crates/cvode/src/: adjoint.rs  builder.rs  constants.rs  error.rs  lib.rs  nordsieck.rs  solver.rs  step.rs  thread_test.rs
crates/rusty-sundials-py/: Cargo.toml
crates/rusty-sundials-py/src/: lib.rs
crates/sundials-core/: Cargo.toml  build.rs
crates/sundials-core/benches/: core_bench.rs
crates/sundials-core/src/: band_solver.rs  context.rs  dual.rs  epirk.rs  error.rs  experimental.rs  fogno.rs  gmres.rs  ilu.rs  lib.rs  math.rs  mpir.rs  pinn.rs  pint.rs  sparse.rs  tests_coverage.rs
crates/sundials-core/src/arkode/: imex.rs  mod.rs  rrk.rs
deploy/: Dockerfile.orchestrator  deploy_gcp.sh
discoveries/: PAPER_AI_Solver_1778606467.tex  fusion_sop_execution_L4-SERV-88219-FUS.json  phase3_fusion_telemetry.json  psc_sop_execution_CR-PSC-72K-00414.json  sop1_execution_EXEC-SOP1-2026-001.json  sop2_execution_EXEC-SOP2-2026-002.json  sop3_execution_EXEC-SOP3-2026-003.json
docs/: ACADEMIC_IMPROVEMENT_SPEC.md  ACADEMIC_ROADMAP_v2.md  Algae Bioreactor Specifications use case.md  Autonomous Research Agent Instructions: .md  Autoresearch_Phase_v6_Inspired_by_Karpathy.md  BENCHMARK_C_VS_RUST.md  BENCHMARK_RESULTS.md  Balanced Eco-Industrial Model.md  COMMUNITY_HPC_GUIDE.md  Contrarian Peer Review Fusion Articel  Earth Digital Twin.md  FUSION_DATASETS_SURVEY.md  Fusion_Disruptions_Scientific_Paper.md  GCP_SERVERLESS_DEPLOYMENT.md  GeoOptimization_Scientific_Report.md  Global_EIP_and_HPC_Validation_Report.md  High-Performance Computing (HPC).md  Improvement report for v7.md  Iter Autonomoua Phase 3.md  Kalundborg_2.0_Scientific_Paper.md  MATHEMATICAL_BACKGROUND.md  MissionControl_Frontend_Specification.md  MissionControl_Functional_Test_Plan.md  MissionControl_PeerReview_Results.md  NATURE_COMPUTATIONAL_SCIENCE_VerifiedEnzyme.md  NEUROSYMBOLIC_EVALUATION.md  Oxidize-Cyclo Full Pipeline Test Report*.md  PAPER_STIFFNESS_WALL.md  PERFORMANCE_IMPROVEMENT_SPEC.md  Phase III Autoresearch Results: Cyber-Ph.md  Phase2_Photonic_Analysis.md  Phase4_Autoresearch_Results.md  RUSTY_SUNDIALS_V8_SCIENTIFIC_MANUAL.md  Real Physics 1D Magnetic.md  Reproducibility_and_Artifact_Evaluation.md  Review v5.0.md  SCIENTIFIC_DOCUMENTATION.md  SCIENTIFIC_USE_CASES.md  SECURITY_POSTURE.md  SHATTERING_THE_STIFFNESS_WALL.html  (+54 more)
examples/: Cargo.toml  bench_nvector.rs  benchmark_a100_hpc.rs  brusselator1d.rs  cv_advdiff_bnd.rs  double_pendulum.rs  exp1_dynamic_imex.rs  exp2_lsi2_latent.rs  exp3_flagno.rs  exp4_ghost_sensitivities.rs  exp5_fogno_xmhd.rs  exponential.rs  fitzhugh_nagumo.rs  fusion_mhd_benchmark.rs  fusion_sciml_phase5.rs  grand_unified_gray_scott.rs  heat1d_banded.rs  hires.rs  hodgkin_huxley.rs  iter_disruption.rs  iter_disruption_3d.rs  jfnk_brusselator.rs  lorenz.rs  lotka_volterra.rs  optimize_photonics.rs  oregonator.rs  rigid_body.rs  robertson.rs  robertson_csv.rs  robertson_paper_data.rs  rossler.rs  run_benchmarks.sh  sir_epidemic.rs  tearing_mode_hero_test.rs  test_python_api.py  three_body.rs  vanderpol.rs
examples/src/: lib.rs
formal_proofs/: README.md  RustySundials.lean  RustySundialsProofs.lean  lakefile.toml
mission-control/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
paper/: 00_frontmatter.md  01_background_architecture.md  02_methodology_results.md  03_gpu_discussion_references.md  Fusion Iter - PEER REVIEW REPORT – ROUNd 1 .md  generate_figures.py  highly critical "contractory" peer review report tailored for the *ACM Transactions on Mathematical Software (TOMS)*.md  manuscript.html  manuscript.md  manuscript.tex  manuscript_v11.md  manuscript_v12.md  manuscript_v13.md  manuscript_v14.md  manuscript_v15.md  manuscript_v16.md  manuscript_v17.md  paper.css  peer_review_v12_neural_fgmres.md
proofs/: NeuralFGMRES_Convergence.lean
scripts/: export_imas_paraview.py  fusion_data_integration.py  generate_paper_figures.py  iter_disruption_3d_video.py  iter_disruption_3d_video_torus.py  iter_disruption_3d_viz.py  iter_disruption_viz.py  reproduce_v12_poc.py  run_global_eip_optimization.py  run_optimization_budget.py  run_optimization_eip_symbiosis.py  run_optimization_fire.py  run_optimization_hpc.py  run_optimization_planetary.py  run_optimization_sun.py  run_optimization_terre.py  run_robertson.sh  simulate_gcp_a100_benchmark.py  verify_c_vs_rust.py
webapp/: Dockerfile  app.js  autoresearch.html  cases.js  cray.html  cray_demo.js  grand_unified.html  index.html  lean.html  neurosymbolic.html  nginx.conf  solver.js  styles.css
(+328 files in other folders)
