[workspace]
members = ["crates/sundials-core", "crates/cvode", "crates/nvector", "examples"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/xaviercallens/rusty-SUNDIALS"
[workspace.dependencies]
rayon = "1.10"
faer = "0.19"
