[workspace]
members = ["crates/sundials-core", "crates/cvode", "crates/nvector", "examples", "crates/ida", "crates/benchmarks"]
resolver = "2"

[workspace.package]
version = "6.2.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/xaviercallens/rusty-SUNDIALS"
[workspace.dependencies]
rayon = "1.10"
faer = "0.19"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "docs/docs_header.html"]
