[package]
name = "cvode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CVODE ODE solver — BDF and Adams methods for stiff and non-stiff systems"

[dependencies]
sundials-core = { path = "../sundials-core" }
nvector = { path = "../nvector" }
thiserror.workspace = true
