[package]
name = "sundials-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for rusty-SUNDIALS: Real, Context, error handling"

[dependencies]

[features]
regenerate-bindings = []

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "core_bench"
harness = false
